<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nobel.employeetracker.HR.LoginHR"
    tools:showIn="@layout/activity_login_hr"
    android:background="@drawable/grey_gred">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/topicon"
        android:src="@drawable/login_top_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lin1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/topicon"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_email" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/transparent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lin2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/lin1"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_pass" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/transparent"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:background="@color/green"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/loginnow"
        android:textColor="@color/abyad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin2" />


</android.support.constraint.ConstraintLayout>
